--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Marc de Garis",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "http": "^0.0.1-security",
