Reverse proxy setup, etc

--- a/src/apache_confs/catbox.degaris.uk-le-ssl.conf
+++ b/src/apache_confs/catbox.degaris.uk-le-ssl.conf
@@ -1,4 +1,5 @@
-<VirtualHost 192.168.0.77:80>
+<IfModule mod_ssl.c>
+<VirtualHost 192.168.0.77:443>
 	# The ServerName directive sets the request scheme, hostname and port that
 	# the server uses to identify itself. This is used when creating
 	# redirection URLs. In the context of virtual hosts, the ServerName
@@ -8,14 +9,8 @@
 	# However, you must set it for any further virtual host explicitly.
 	#ServerName www.example.com
 
-	ServerName chatbox.degaris.uk
-	DocumentRoot /var/www/degaris/chatbox
-
-	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
-	# error, crit, alert, emerg.
-	# It is also possible to configure the loglevel for particular
-	# modules, e.g.
-	#LogLevel info ssl:warn
+	ServerName catbox.degaris.uk
+	DocumentRoot /var/www/degaris/catbox
 
 	ErrorLog ${APACHE_LOG_DIR}/error_degaris.log
 	CustomLog ${APACHE_LOG_DIR}/access_degaris.log combined
@@ -26,9 +21,27 @@
 	# following line enables the CGI configuration for this host only
 	# after it has been globally disabled with "a2disconf".
 	#Include conf-available/serve-cgi-bin.conf
-RewriteEngine on
-RewriteCond %{SERVER_NAME} =chatbox.degaris.uk
-RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
-</VirtualHost>
 
-# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
+	ProxyRequests off
+	ProxyVia on
+
+	RewriteEngine On
+	RewriteCond %{REQUEST_URI}  ^/                     [NC]
+	RewriteCond %{QUERY_STRING} transport=websocket    [NC]
+	RewriteRule ^/?(.*)         ws://localhost:8080/$1 [P,L]
+
+	ProxyPass / http://localhost:8080/
+	ProxyPassReverse / http://localhost:8080/
+
+# Some rewrite rules in this file were disabled on your HTTPS site,
+# because they have the potential to create redirection loops.
+
+# RewriteCond %{SERVER_NAME} =catbox.degaris.uk
+# RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
+
+	Include /etc/letsencrypt/options-ssl-apache.conf
+	SSLCertificateFile /etc/letsencrypt/live/catbox.degaris.uk/fullchain.pem
+	SSLCertificateKeyFile /etc/letsencrypt/live/catbox.degaris.uk/privkey.pem
+
+</VirtualHost>
+</IfModule>
