--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Marc de Garis",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
@@ -20,6 +21,7 @@
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.12",
     "@types/express-session": "^1.17.3",
     "copyfiles": "^2.4.1",
