--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "host": "nodemon",
     "watch": "watch 'npm run build' ./src",
-    "build": "tsc && copyfiles -u 2 src/public/*.html src/public/*.ico src/public/**/**/* dist/public"
+    "build": "rm -rf dist && tsc && copyfiles -u 2 src/public/* src/public/static/* src/public/static/**/* dist/public"
   },
   "keywords": [],
   "author": "Marc de Garis",
@@ -18,12 +18,14 @@
     "express-session": "^1.17.2",
     "http": "^0.0.1-security",
     "jquery": "^3.6.0",
+    "mongodb": "^3.6.9",
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.12",
     "@types/express-session": "^1.17.3",
+    "@types/mongodb": "^3.6.18",
     "copyfiles": "^2.4.1",
     "watch": "^0.13.0",
     "webpack": "^5.38.1"
