--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Marc de Garis",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -19,9 +20,11 @@
     "http": "^0.0.1-security",
     "jquery": "^3.6.0",
     "mongodb": "^3.6.9",
+    "mysql2": "^2.2.5",
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.12",
     "@types/express-session": "^1.17.3",
