--- a/package.json
+++ b/package.json
@@ -4,32 +4,37 @@
   "description": "",
   "main": "./dist/app.js",
   "scripts": {
+    "test": "tsc && mocha --recursive ./dist/test/**/*.js",
     "host": "nodemon",
     "watch": "watch 'npm run build' ./src",
-    "build": "rm -rf dist && tsc && copyfiles -u 2 src/public/* src/public/static/* src/public/static/**/* dist/public"
+    "build": "rm -rf dist && tsc && copyfiles -u 1 src/views/* dist && copyfiles -u 2 src/public/* src/public/static/* src/public/static/**/* dist/public",
+    "start": "node dist/app,js"
   },
   "keywords": [],
   "author": "Marc de Garis",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "argon2": "^0.28.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "http": "^0.0.1-security",
-    "jquery": "^3.6.0",
-    "mongodb": "^3.6.9",
     "mysql2": "^2.2.5",
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "@types/argon2": "^0.15.0",
+    "@types/chai": "^4.2.19",
     "@types/cookie-parser": "^1.4.2",
+    "@types/ejs": "^3.0.6",
     "@types/express": "^4.17.12",
     "@types/express-session": "^1.17.3",
-    "@types/mongodb": "^3.6.18",
+    "@types/mocha": "^8.2.2",
+    "chai": "^4.3.4",
     "copyfiles": "^2.4.1",
+    "mocha": "^9.0.1",
     "watch": "^0.13.0",
     "webpack": "^5.38.1"
   }
