--- a/package.json
+++ b/package.json
@@ -1,41 +1,44 @@
 {
-  "name": "catbox",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./dist/app.js",
-  "scripts": {
-    "test": "tsc && mocha --recursive ./dist/test/**/*.js",
-    "host": "nodemon",
-    "watch": "watch 'npm run build' ./src",
-    "build": "rm -rf dist && tsc && copyfiles -u 1 src/views/* dist && copyfiles -u 2 src/public/* src/public/static/* src/public/static/**/* dist/public",
-    "start": "node dist/app,js"
-  },
-  "keywords": [],
-  "author": "Marc de Garis",
-  "license": "ISC",
-  "dependencies": {
-    "argon2": "^0.28.2",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "http": "^0.0.1-security",
-    "mysql2": "^2.2.5",
-    "socket.io": "^4.1.2"
-  },
-  "devDependencies": {
-    "@types/argon2": "^0.15.0",
-    "@types/chai": "^4.2.19",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/ejs": "^3.0.6",
-    "@types/express": "^4.17.12",
-    "@types/express-session": "^1.17.3",
-    "@types/mocha": "^8.2.2",
-    "chai": "^4.3.4",
-    "copyfiles": "^2.4.1",
-    "mocha": "^9.0.1",
-    "watch": "^0.13.0",
-    "webpack": "^5.38.1"
-  }
+    "name": "catbox",
+    "version": "1.0.0",
+    "description": "",
+    "main": "./dist/app.js",
+    "scripts": {
+        "test": "tsc && mocha --recursive ./dist/test/**/*.js",
+        "host": "nodemon",
+        "watch-all": "npm run watch-build & nodemon",
+        "watch-build": "watch 'npm run build' ./src",
+        "build": "rm -rf dist && tsc && copyfiles -u 1 src/views/* dist && copyfiles -u 2 src/public/* src/public/static/* src/public/static/**/* dist/public",
+        "start": "node dist/app,js"
+    },
+    "keywords": [],
+    "author": "Marc de Garis",
+    "license": "ISC",
+    "dependencies": {
+        "argon2": "^0.28.2",
+        "cookie-parser": "^1.4.5",
+        "cors": "^2.8.5",
+        "ejs": "^3.1.6",
+        "email-validator": "^2.0.4",
+        "express": "^4.17.1",
+        "express-session": "^1.17.2",
+        "http": "^0.0.1-security",
+        "mysql2": "^2.2.5",
+        "socket.io": "^4.1.2"
+    },
+    "devDependencies": {
+        "@types/argon2": "^0.15.0",
+        "@types/chai": "^4.2.19",
+        "@types/cookie-parser": "^1.4.2",
+        "@types/ejs": "^3.0.6",
+        "@types/email-validator": "^1.0.6",
+        "@types/express": "^4.17.12",
+        "@types/express-session": "^1.17.3",
+        "@types/mocha": "^8.2.2",
+        "chai": "^4.3.4",
+        "copyfiles": "^2.4.1",
+        "mocha": "^9.0.1",
+        "watch": "^0.13.0",
+        "webpack": "^5.38.1"
+    }
 }
