--- a/package.json
+++ b/package.json
@@ -15,23 +15,25 @@
     "author": "Marc de Garis",
     "license": "ISC",
     "dependencies": {
+        "@types/validator": "^13.6.2",
         "argon2": "^0.28.2",
+        "async-validator": "^3.5.2",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "ejs": "^3.1.6",
-        "email-validator": "^2.0.4",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
         "http": "^0.0.1-security",
+        "lodash": "^4.17.21",
         "mysql2": "^2.2.5",
-        "socket.io": "^4.1.2"
+        "socket.io": "^4.1.2",
+        "validator": "^13.6.0"
     },
     "devDependencies": {
         "@types/argon2": "^0.15.0",
         "@types/chai": "^4.2.19",
         "@types/cookie-parser": "^1.4.2",
         "@types/ejs": "^3.0.6",
-        "@types/email-validator": "^1.0.6",
         "@types/express": "^4.17.12",
         "@types/express-session": "^1.17.3",
         "@types/mocha": "^8.2.2",
